; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23228.c_write_to_addr.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_23228.c_write_to_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CODEDPATH = common dso_local global i32 0, align 4
@path_len = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_to_addr(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @CODEDPATH, align 4
  %7 = sub nsw i32 %5, %6
  %8 = load i32, i32* @path_len, align 4
  %9 = sub nsw i32 %7, %8
  %10 = load i8*, i8** %4, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = call i32 @write_buffer(i32 %9, i8* %10, i32 %12, i32 0)
  ret void
}

declare dso_local i32 @write_buffer(i32, i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
